[tool.poetry]
name = "psychic-octo-goggles"
version = "0.1.0"
description = "Security demo"
authors = ["Jess Bodzo <jess@sjbodzo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
in-toto = "^1.1.1"
securesystemslib = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
